--- a/src/pages/dropdownmenu/dropdownmenu.html
+++ b/src/pages/dropdownmenu/dropdownmenu.html
@@ -30,18 +30,16 @@
   <button ion-item (click)="openSpelerscore()">
     <ion-icon color="secondary" name="shirt" item-left></ion-icon>
     <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
-    Spelers score
+    Punten per voetballer
+  </button>
+  <button ion-item (click)="openSpelerstatistieken()">
+    <ion-icon color="secondary" name="pie" item-left></ion-icon>
+    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
+    Gekozen voetballers
   </button>
   <button ion-item (click)="openDeelnemers()">
     <ion-icon color="secondary" name="people" item-left></ion-icon>
     <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Deelnemers
   </button>
-
-  <button ion-item (click)="openSpelerstatistieken()">
-    <ion-icon color="secondary" name="pie" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
-    Gekozen spelers
-  </button>
-
 </ion-list>
