--- a/src/pages/supereleven-navbar/supereleven-navbar.html
+++ b/src/pages/supereleven-navbar/supereleven-navbar.html
@@ -1,8 +1,11 @@
-<ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
-  <img [src]="'assets/icon/logo_white.png'">
-  <ion-buttons end>
-    <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
-      <ion-icon name="menu"></ion-icon>
-    </button>
-  </ion-buttons>
-</ion-navbar>
+<ion-header>
+  <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
+    <img [src]="'assets/icon/logo_white.png'">
+    <ion-buttons end>
+      <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
+</ion-header>
+
