--- a/src/pages/vragenstand/vragenstand.html
+++ b/src/pages/vragenstand/vragenstand.html
@@ -1,6 +1,12 @@
 <ion-header>
-  <supereleven-navbar></supereleven-navbar>
-
+  <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
+    <img [src]="'assets/icon/logo_white.png'">
+    <ion-buttons end>
+      <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
 
 </ion-header>
