--- a/src/pages/wedstrijdenstand/wedstrijdenstand.html
+++ b/src/pages/wedstrijdenstand/wedstrijdenstand.html
@@ -1,10 +1,14 @@
 <ion-header>
-  <supereleven-navbar></supereleven-navbar>
-
+  <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
+    <img [src]="'assets/icon/logo_white.png'">
+    <ion-buttons end>
+      <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
   <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()" placeholder="zoek op naam"></ion-searchbar>
-
 </ion-header>
-
 
 <ion-content #content>
   <!--<ion-refresher (ionRefresh)="doRefresh($event)">-->
@@ -15,8 +19,10 @@
       <!--refreshingText="Gegevens aan het ophalen">-->
     <!--</ion-refresher-content>-->
   <!--</ion-refresher>-->
-
-  <ion-card *ngIf="wedstrijdenstand">
+  <div *ngIf="isLoading" class="spinner">
+    <ion-spinner name="crescent"></ion-spinner>
+  </div>
+  <ion-card>
     <ion-item ion-affix [content]="content" color="secondary">
       <ion-row class="header">
         <ion-col class="positie">Pos.</ion-col>
@@ -24,7 +30,7 @@
         <ion-col class="punten">Punten</ion-col>
       </ion-row>
     </ion-item>
-    <button ion-item color="white" text-wrap *ngFor="let line of wedstrijdenstand; let positie = index" (click)="goToDetails(line)">
+    <button [hidden]="isLoading" ion-item color="white" text-wrap *ngFor="let line of wedstrijdenstand; let positie = index" (click)="goToDetails(line)">
       <ion-row>
         <ion-col class="positie">
           {{line.positie}}
