--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-  <!-- Ionic's root component and where the app will load -->
+<!-- Ionic's root component and where the app will load -->
   <ion-app color="dark"></ion-app>
 
   <!-- The polyfills js is generated during the build process -->
