--- a/src/pages/deelnemers-per-speler/deelnemers-per-speler.html
+++ b/src/pages/deelnemers-per-speler/deelnemers-per-speler.html
@@ -1,5 +1,12 @@
 <ion-header>
-  <supereleven-navbar></supereleven-navbar>
+  <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
+    <img [src]="'assets/icon/logo_white.png'">
+    <ion-buttons end>
+      <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
 
   <ion-item text-wrap color="primary">
     <ion-label color="white">
@@ -18,8 +25,11 @@
   <!--refreshingText="Gegevens aan het ophalen">-->
   <!--</ion-refresher-content>-->
   <!--</ion-refresher>-->
+  <div *ngIf="isLoading" class="spinner">
+    <ion-spinner name="crescent"></ion-spinner>
+  </div>
 
-  <ion-card *ngIf="deelnemersPerSpeler">
+  <ion-card *ngIf="deelnemersPerSpeler && !isLoading">
     <ion-item ion-affix [content]="content" color="secondary">
       <ion-row>
         <ion-col class="positie">Pos.</ion-col>
