--- a/src/pages/spelers-score/spelers-score.html
+++ b/src/pages/spelers-score/spelers-score.html
@@ -1,19 +1,30 @@
 <ion-header>
-  <supereleven-navbar></supereleven-navbar>
+  <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
+    <img [src]="'assets/icon/logo_white.png'">
+    <ion-buttons end>
+      <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
   <ion-item text-wrap color="primary">
     <ion-label color="white">Speelronde</ion-label>
-    <ion-select [(ngModel)]="activeSpeelronde"  (ngModelChange)="getSpelerslijst($event)">
+    <ion-select [(ngModel)]="activeSpeelronde" (ngModelChange)="getSpelerslijst($event)">
       <ion-option>Alle</ion-option>
       <ion-option *ngFor="let speelronde of speelrondeList" [value]="speelronde.RoundId">{{speelronde.RoundId}}
       </ion-option>
 
     </ion-select>
   </ion-item>
-    <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
+  <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
 </ion-header>
 
 <ion-content #content>
-  <ion-spinner *ngIf="searching"></ion-spinner>
+
+  <div *ngIf="isLoading" class="spinner">
+    <ion-spinner name="crescent"></ion-spinner>
+  </div>
+
   <ion-card>
     <ion-item ion-affix [content]="content" color="secondary">
       <ion-row class="header">
@@ -22,7 +33,7 @@
         <ion-col class="count">Aantal</ion-col>
       </ion-row>
     </ion-item>
-    <div *ngFor="let line of spelerlijst | orderBy : ['-TotalScore']">
+    <div [hidden]="isLoading" *ngFor="let line of spelerlijst | orderBy : ['-TotalScore']">
       <button ion-item detail-none text-wrap *ngIf="line.TotalScore > 0" (click)="line.showDetails = !line.showDetails">
         <ion-icon *ngIf="!line.showDetails" color="secondary" item-right name="ios-add-circle-outline"></ion-icon>
         <ion-icon *ngIf="line.showDetails" color="secondary" item-right name="ios-remove-circle-outline"></ion-icon>
