--- a/src/pages/vragenstand-details/vragenstand-details.html
+++ b/src/pages/vragenstand-details/vragenstand-details.html
@@ -1,8 +1,12 @@
 <ion-header>
-
-  <supereleven-navbar></supereleven-navbar>
-
-
+  <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
+    <img [src]="'assets/icon/logo_white.png'">
+    <ion-buttons end>
+      <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
   <ion-item text-wrap color="secondary">
     {{vragenstandRegel.Participant.Name}} heeft {{vragenstandRegel.TotalQuestionsScore}} punten gehaald.
   </ion-item>
