--- a/src/pages/teamstand-details/teamstand-details.html
+++ b/src/pages/teamstand-details/teamstand-details.html
@@ -59,6 +59,11 @@
         <ion-col>De nul</ion-col>
         <ion-col class="punten"> {{line.CleanSheetScore}}</ion-col>
       </ion-row>
+      <ion-row ion-text color="light" *ngIf="line.showDetails && line.PenaltyStoppedScore != 0">
+        <ion-col class="club"></ion-col>
+        <ion-col>Penalty gestopt</ion-col>
+        <ion-col class="punten"> {{line.PenaltyStoppedScore}}</ion-col>
+      </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Assist != 0">
         <ion-col class="club"></ion-col>
         <ion-col>Assist</ion-col>
@@ -69,6 +74,11 @@
         <ion-col>Doelpunten</ion-col>
         <ion-col class="punten"> {{line.Goals}}</ion-col>
       </ion-row>
+      <ion-row ion-text color="light" *ngIf="line.showDetails && line.PenaltyMissed != 0">
+        <ion-col class="club"></ion-col>
+        <ion-col>Penalty gemist</ion-col>
+        <ion-col class="punten"> {{line.PenaltyMissed}}</ion-col>
+      </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.OwnGoals != 0">
         <ion-col class="club"></ion-col>
         <ion-col>Eigen goal</ion-col>
@@ -78,6 +88,11 @@
         <ion-col class="club"></ion-col>
         <ion-col>Geel</ion-col>
         <ion-col class="punten"> {{line.YellowCard}}</ion-col>
+      </ion-row>
+      <ion-row ion-text color="light" *ngIf="line.showDetails && line.SecondYellowCard != 0">
+        <ion-col class="club"></ion-col>
+        <ion-col>2x Geel</ion-col>
+        <ion-col class="punten"> {{line.SecondYellowCard}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.RedCard != 0">
         <ion-col class="club"></ion-col>
