--- a/src/pages/spelers-score/spelers-score.html
+++ b/src/pages/spelers-score/spelers-score.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
-    <img [src]="'assets/icon/logo_white.png'">
+    <ion-title>         <img class="center" [src]="'assets/icon/logo_white.png'">       </ion-title>
     <ion-buttons end>
       <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
         <ion-icon name="menu"></ion-icon>
@@ -39,7 +39,7 @@
         <ion-icon *ngIf="line.showDetails" color="secondary" item-right name="ios-remove-circle-outline"></ion-icon>
         <ion-row>
           <ion-col class="club">
-            <img class="clubicon" [src]="'assets/clubicons/'+ line.Team + '.png'">
+            <img class="clubicon" src="assets/clubicons/{{ line.Team | lowercase }}.png">
           </ion-col>
           <ion-col>{{line.Name}}
           </ion-col>
