--- a/src/pages/spelerstatistieken/spelerstatistieken.html
+++ b/src/pages/spelerstatistieken/spelerstatistieken.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
-    <img [src]="'assets/icon/logo_white.png'">
+    <ion-title>         <img class="center" [src]="'assets/icon/logo_white.png'">       </ion-title>
     <ion-buttons end>
       <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
         <ion-icon name="menu"></ion-icon>
@@ -27,7 +27,7 @@
       <button ion-item text-wrap (click)="goToDetails(line)" *ngIf="line.PlayerName">
         <ion-row>
           <ion-col class="club">
-            <img class="clubicon" [src]="'assets/clubicons/'+ line.Team + '.png'">
+            <img class="clubicon" src="assets/clubicons/{{line.Team | lowercase }}.png">
           </ion-col>
           <ion-col>{{line.PlayerName}}
           </ion-col>
